examples/test/testpolicy16049.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16049
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key42: value2
      key18: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value5
          key23: value3
          key12: value27
      podSelector:
        matchLabels:
          key28: value6
